--- a/style.css
+++ b/style.css
@@ -1,18 +1,10 @@
-[data-tab-content] {
-    display: none;
-}
-
-.active[data-tab-content] {
-    display: block;
-}
-
 body {
     background-color: #303030;
     padding: 0px;
     margin: 0px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
     font-weight: bold;
+    font-family: 'Roboto', sans-serif;
 }
 
 .main {
@@ -20,15 +12,21 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     min-width: 500px;
+    height: 100vh;
 }
 
-.info-container {
-    background-color:aliceblue;
-    width: 200px;
-    min-width: 200px;
+.img-container {
+    background-color: #f0f8ff;
+    width: 230px;
     height: 320px;
+}
+
+.img-container img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: right;
 }
 
 .url-container {
@@ -43,43 +41,13 @@ body {
     min-width: 500px;
 }
 
-.info-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: aliceblue;
-    width: 200px;
-    min-width: 200px;
-    height: 30px;
+.urls a {
+    color: black;
+    text-decoration: none;
 }
 
-
-.tabs {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    list-style: none;
-    padding-left: 15px;
-}
-
-.time {
-    margin-right: 15px;
-}
-
-.tabs > li {
-    background-color: black;
-    width: 5px;
-    height: 5px;
-    border-radius: 50%;
-    margin-right: 5px;
-    cursor: pointer;
-}
-
-.content {
-    padding: 15px;
-    height: 90%;
-    display: flex;
-    flex-direction: column;
+.urls a:visited {
+    color: black;
 }
 
 table {
@@ -87,25 +55,16 @@ table {
     border-left: 1.5px solid #990000;
 }
 
-th, td {
+th,
+td {
     padding: 5px 10px;
 }
 
 th {
- color: #990000;
- text-align: left;
+    color: #990000;
+    text-align: left;
 }
 
 td {
     text-align: left;
 }
-
-.tab.active {
-    background-color: #CCC;
-}
-
-.tab:hover {
-    background-color: #AAA;
-}
-
-
